RESOLVED FIXED212676
VMInspector APIs should be taking a VM* instead of a JSGlobalObject*.
https://bugs.webkit.org/show_bug.cgi?id=212676
Summary VMInspector APIs should be taking a VM* instead of a JSGlobalObject*.
Mark Lam
Reported 2020-06-02 17:55:39 PDT
This because: 1. none of the functions currently taking a JSGlobalObject* actually need the globalObject. All of them need the VM. 2. the role of the VMInspector is to enable inspection of the VM. By requiring that it be passed a JSGlobalObject*, we were actually preventing the VMInspector from being used in code that have a VM to inspect but don't have a JSGlobalObject to use.
Attachments
proposed patch. (10.88 KB, patch)
2020-06-02 18:00 PDT, Mark Lam
saam: review+
Mark Lam
Comment 1 2020-06-02 18:00:09 PDT
Created attachment 400871 [details] proposed patch.
Mark Lam
Comment 2 2020-06-02 18:26:21 PDT
Thanks for the reviews. Landed in r262467: <http://trac.webkit.org/r262467>.
Radar WebKit Bug Importer
Comment 3 2020-06-02 18:27:16 PDT
Note You need to log in before you can comment on or make changes to this bug.