Source/JavaScriptCore/tools/VMInspector.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2017-2019 Apple Inc. All rights reserved.
+ * Copyright (C) 2017-2020 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -203,33 +203,31 @@ auto VMInspector::codeBlockForMachinePC(const VMInspector::Locker&, void* machin
 #endif
 }
 
-bool VMInspector::currentThreadOwnsJSLock(JSGlobalObject* globalObject)
+bool VMInspector::currentThreadOwnsJSLock(VM* vm)
 {
-    return globalObject->vm().currentThreadIsHoldingAPILock();
+    return vm->currentThreadIsHoldingAPILock();
 }
 
-static bool ensureCurrentThreadOwnsJSLock(JSGlobalObject* globalObject)
+static bool ensureCurrentThreadOwnsJSLock(VM* vm)
 {
-    if (VMInspector::currentThreadOwnsJSLock(globalObject))
+    if (VMInspector::currentThreadOwnsJSLock(vm))
         return true;
     dataLog("ERROR: current thread does not own the JSLock\n");
     return false;
 }
 
-void VMInspector::gc(JSGlobalObject* globalObject)
+void VMInspector::gc(VM* vm)
 {
-    VM& vm = globalObject->vm();
-    if (!ensureCurrentThreadOwnsJSLock(globalObject))
+    if (!ensureCurrentThreadOwnsJSLock(vm))
         return;
-    vm.heap.collectNow(Sync, CollectionScope::Full);
+    vm->heap.collectNow(Sync, CollectionScope::Full);
 }
 
-void VMInspector::edenGC(JSGlobalObject* globalObject)
+void VMInspector::edenGC(VM* vm)
 {
-    VM& vm = globalObject->vm();
-    if (!ensureCurrentThreadOwnsJSLock(globalObject))
+    if (!ensureCurrentThreadOwnsJSLock(vm))
         return;
-    vm.heap.collectSync(CollectionScope::Eden);
+    vm->heap.collectSync(CollectionScope::Eden);
 }
 
 bool VMInspector::isInHeap(Heap* heap, void* ptr)
@@ -271,9 +269,9 @@ bool VMInspector::isValidCell(Heap* heap, JSCell* candidate)
     return functor.found;
 }
 
-bool VMInspector::isValidCodeBlock(JSGlobalObject* globalObject, CodeBlock* candidate)
+bool VMInspector::isValidCodeBlock(VM* vm, CodeBlock* candidate)
 {
-    if (!ensureCurrentThreadOwnsJSLock(globalObject))
+    if (!ensureCurrentThreadOwnsJSLock(vm))
         return false;
 
     struct CodeBlockValidationFunctor {
@@ -292,16 +290,14 @@ bool VMInspector::isValidCodeBlock(JSGlobalObject* globalObject, CodeBlock* cand
         mutable bool found { false };
     };
 
-    VM& vm = globalObject->vm();
     CodeBlockValidationFunctor functor(candidate);
-    vm.heap.forEachCodeBlock(functor);
+    vm->heap.forEachCodeBlock(functor);
     return functor.found;
 }
 
-CodeBlock* VMInspector::codeBlockForFrame(JSGlobalObject* globalObject, CallFrame* topCallFrame, unsigned frameNumber)
+CodeBlock* VMInspector::codeBlockForFrame(VM* vm, CallFrame* topCallFrame, unsigned frameNumber)
 {
-    VM& vm = globalObject->vm();
-    if (!ensureCurrentThreadOwnsJSLock(globalObject))
+    if (!ensureCurrentThreadOwnsJSLock(vm))
         return nullptr;
 
     if (!topCallFrame)
@@ -330,7 +326,7 @@ CodeBlock* VMInspector::codeBlockForFrame(JSGlobalObject* globalObject, CallFram
     };
 
     FetchCodeBlockFunctor functor(frameNumber);
-    topCallFrame->iterate(vm, functor);
+    topCallFrame->iterate(*vm, functor);
     return functor.codeBlock;
 }
 
@@ -366,12 +362,12 @@ private:
     mutable unsigned m_currentFrame { 0 };
 };
 
-void VMInspector::dumpCallFrame(JSGlobalObject* globalObject, CallFrame* callFrame, unsigned framesToSkip)
+void VMInspector::dumpCallFrame(VM* vm, CallFrame* callFrame, unsigned framesToSkip)
 {
-    if (!ensureCurrentThreadOwnsJSLock(globalObject))
+    if (!ensureCurrentThreadOwnsJSLock(vm))
         return;
     DumpFrameFunctor functor(DumpFrameFunctor::DumpOne, framesToSkip);
-    callFrame->iterate(globalObject->vm(), functor);
+    callFrame->iterate(*vm, functor);
 }
 
 void VMInspector::dumpRegisters(CallFrame* callFrame)
@@ -465,14 +461,14 @@ void VMInspector::dumpRegisters(CallFrame* callFrame)
     dataLogF("-----------------------------------------------------------------------------\n");
 }
 
-void VMInspector::dumpStack(JSGlobalObject* globalObject, CallFrame* topCallFrame, unsigned framesToSkip)
+void VMInspector::dumpStack(VM* vm, CallFrame* topCallFrame, unsigned framesToSkip)
 {
-    if (!ensureCurrentThreadOwnsJSLock(globalObject))
+    if (!ensureCurrentThreadOwnsJSLock(vm))
         return;
     if (!topCallFrame)
         return;
     DumpFrameFunctor functor(DumpFrameFunctor::DumpAll, framesToSkip);
-    topCallFrame->iterate(globalObject->vm(), functor);
+    topCallFrame->iterate(*vm, functor);
 }
 
 void VMInspector::dumpValue(JSValue value)
